Fixed click problem on narrow screens.

--- a/mcquick/res/custom.css
+++ b/mcquick/res/custom.css
@@ -44,3 +44,6 @@ h1, h2, h3, h4, h5, h6{
     top:0;
     left:0;
 }
+.rlab{
+    padding-left:50px;
+}
